--- a/PandasPart7.ipynb
+++ b/PandasPart7.ipynb
@@ -2,8 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -13,9 +15,17 @@
     "from matplotlib import style\n",
     "style.use('ggplot')\n",
     "import re\n",
-    "import pickle\n",
-    "\n",
-    "\n",
+    "import pickle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "file = open('QuandlApiKey', 'r')\n",
     "api_key = file.read()\n",
     "file.close()\n",
@@ -23,8 +33,7 @@
     "\n",
     "def state_list():\n",
     "    fiddy_states = pd.read_html('https://simple.wikipedia.org/wiki/List_of_U.S._states')\n",
-    "    return fiddy_states[0][0][2:]\n",
-    "\n"
+    "    return fiddy_states[0][0][2:]"
    ]
   },
   {
@@ -546,7 +555,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
