--- a/PandasPart7.ipynb
+++ b/PandasPart7.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -462,18 +462,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              AK         AZ         AR         CA         CO         CT  \\\n",
+      "count  49.000000  49.000000  49.000000  49.000000  49.000000  49.000000   \n",
+      "mean    0.941492   0.935449   0.971156   0.947913   0.951671   0.928155   \n",
+      "std     0.041423   0.026705   0.025968   0.023585   0.030630   0.040667   \n",
+      "min     0.781964   0.855751   0.867689   0.874911   0.844022   0.816486   \n",
+      "25%     0.929136   0.921705   0.965941   0.935287   0.933078   0.900540   \n",
+      "\n",
+      "              DE         FL         GA         HI    ...             SD  \\\n",
+      "count  49.000000  49.000000  49.000000  49.000000    ...      49.000000   \n",
+      "mean    0.962039   0.932540   0.954384   0.940090    ...       0.960251   \n",
+      "std     0.028877   0.030091   0.026073   0.033119    ...       0.035336   \n",
+      "min     0.869485   0.844319   0.859542   0.794623    ...       0.819404   \n",
+      "25%     0.950275   0.915659   0.945317   0.927392    ...       0.949956   \n",
+      "\n",
+      "              TN         TX         UT         VT         VA         WA  \\\n",
+      "count  49.000000  49.000000  49.000000  49.000000  49.000000  49.000000   \n",
+      "mean    0.970139   0.932649   0.957221   0.962609   0.966757   0.966934   \n",
+      "std     0.025985   0.041298   0.031834   0.030424   0.025991   0.024015   \n",
+      "min     0.863672   0.798976   0.855688   0.845847   0.853024   0.874376   \n",
+      "25%     0.959631   0.915677   0.944001   0.956918   0.960516   0.958526   \n",
+      "\n",
+      "              WV         WI         WY  \n",
+      "count  49.000000  49.000000  49.000000  \n",
+      "mean    0.964097   0.964473   0.941057  \n",
+      "std     0.032034   0.025702   0.043417  \n",
+      "min     0.838302   0.884429   0.778561  \n",
+      "25%     0.955099   0.956036   0.924256  \n",
+      "\n",
+      "[5 rows x 49 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "print(HPI_State_Correlation.describe().head())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "               AK          AZ          AR          CA          CO          CT  \\\n",
+      "count  510.000000  510.000000  510.000000  510.000000  510.000000  510.000000   \n",
+      "mean   102.030559   93.932190   90.579823   97.186834   79.135286   93.562943   \n",
+      "std     42.199918   45.768873   30.417454   58.387774   41.308447   41.019755   \n",
+      "min     34.385997   28.850928   36.845816   15.696667   19.647452   24.493861   \n",
+      "25%     71.338806   62.405846   66.953309   47.116320   44.676144   59.508199   \n",
+      "\n",
+      "               DE          FL          GA          HI     ...              SD  \\\n",
+      "count  510.000000  510.000000  510.000000  510.000000     ...      510.000000   \n",
+      "mean    95.508556   99.229094   80.445363  119.894635     ...       90.007574   \n",
+      "std     46.438118   50.535660   30.864418   70.260453     ...       38.295568   \n",
+      "min     27.249036   31.036368   29.500462   26.679099     ...       35.246260   \n",
+      "25%     52.552524   61.601081   56.210536   52.299405     ...       57.273358   \n",
+      "\n",
+      "               TN          TX          UT          VT          VA          WA  \\\n",
+      "count  510.000000  510.000000  510.000000  510.000000  510.000000  510.000000   \n",
+      "mean    87.460729   93.056883   86.771275   97.789046  100.364285   89.936441   \n",
+      "std     34.008923   35.714551   42.225386   48.066408   51.703014   51.421533   \n",
+      "min     32.171503   32.626112   24.593496   26.620695   27.901501   17.478975   \n",
+      "25%     57.777255   68.873233   49.496272   52.730024   55.651353   40.925916   \n",
+      "\n",
+      "               WV          WI          WY  \n",
+      "count  510.000000  510.000000  510.000000  \n",
+      "mean    93.554680   83.277775  101.175975  \n",
+      "std     31.107957   35.297722   49.301157  \n",
+      "min     41.006639   28.115545   31.663002  \n",
+      "25%     65.814889   47.745101   62.027452  \n",
+      "\n",
+      "[5 rows x 49 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "print(HPI_data.describe().head())"
    ]
