--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -1,10 +1,53 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "\n",
+    "class Solution(object):\n",
+    "    def countAndSay(self, n):\n",
+    "        \"\"\"\n",
+    "        :type n: int\n",
+    "        :rtype: str\n",
+    "        \"\"\"\n",
+    "        s = '1'"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\\alpha$ and $\\beta$ is $\\alpha+\\beta=5$"
+    "print(\"\\\\\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, -1, 4, 3, 2, 1]\n",
+      "['Hello ', 'orld!', '4234f234234', '32434']\n"
+     ]
+    }
+   ],
+   "source": [
+    "myList = [1,2,3,4,-1,0]\n",
+    "#print(myList.sort())\n",
+    "myList.reverse()\n",
+    "print(myList)\n",
+    "\n",
+    "myString = \"Hello world!w4234f234234w32434\"\n",
+    "print(myString.split(\"w\"))"
    ]
   },
   {
